@@ -21,7 +21,7 @@
 #
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: rc.sysinit.in,v 1.40 2005/01/16 00:08:48 tom_kelly33 Exp $
+# $Id: rc.sysinit.in,v 1.41 2005/01/25 06:12:38 tom_kelly33 Exp $
 #
 
 export PATH=/initrd/bin:/initrd/sbin:/initrd/usr/bin:/initrd/usr/sbin:/bin:/sbin:/usr/bin:/usr/sbin
@@ -323,7 +323,7 @@ setupdir_var() {
 				case $d in
 					tmp*)
 						;;
-					lib/rpm*|lib/nxserver/nxhome*|lib/urpmi*|lib/samba*|lib/mysql*)
+					lib/rpm*|lib/nxserver/nxhome*|lib/urpmi*|lib/samba*|lib/gnome*|lib/mysql*)
 						[ ! -e "/var/$d" ] && ln -sf "$MNTLIVECD/var/$d" "/var/$d" || true
 						;;
 					cache*|db*|lib*|local*|lock*|log*|mail*|mtink*|nis*|opt*|preserve*|run*|spool*|xkb*|yp*)
